<resources>
    <string name="app_name">MUCOBA POS</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="downloaded">Downloaded</string>
    <string name="more">More</string>
    <string name="settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_delete">Delete</string>
    <string name="fname">First Name</string>
    <string name="sir_name">Middle Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="dsitrict">District</string>
    <string name="last_name">Last Name</string>
    <string name="timeout">Timed out...</string>
    <string name="ok">Detect successful</string>
    <string name="ad_page05">"Scan! You will get information of the Receipt\n"</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="group_reg"><b>Register</b></string>
    <string name="fetch"><font fgcolor="red"><b>CANCEL</b></font></string>
    <string name="getbarcodes">Detecting,please wait...</string>
    <string name="transfer"><b>TRANSFER</b></string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="id_type"><b>Type of ID</b></string>
    <string name="idnum">ID Number</string>
    <string name="account_type"><b>Account Type</b></string>
    <string name="save"><b>SAVE</b></string>
    <string name="set_face_image">Set Face Image</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="err_msg_name">Enter your username</string>
    <string name="btnUploadToServer">Upload to Server</string>
    <string name="confirm"><font fgcolor="blue"><b>OK</b></font></string>
    <string name="heading"><font fgcolor="@android:color/holo_green_dark">Kwa maendeleo yako</font></string>
    <string name="reject"><font fgcolor="red"><b>CANCEL</b></font></string>
    <string name="warn_trans"><font fgcolor="red"><b>THIBITISHA!</b></font></string>
    <string name="err_msg_password">Enter the password</string>
    <string name="phone">PhoneNumber</string>
    <string name="client">Client ID</string>
    <string name="client_id">Client ID</string>
    <string name="child_face_image">PICHA YA MTOTO</string>
    <string name="confirmation">Dhibitisha Habari za Mtoto</string>
    <string name="mnameconf">Mzazi2  :</string>
    <string name="lnameconf">Mzazi3    :</string>
    <string name="fnameconf">Mzazi1  :</string>
    <string name="child_s">Mtoto2  :</string>
    <string name="child_l">Mtoto3    :</string>
    <string name="child_f">Mtoto1  :</string>
    <string name="mobconf">Simu:</string>
    <string name="dobconf">Kuzaliwa :</string>
    <string name="genderconf">Jinsia      :</string>
    <string name="clientconf">ClientID     :</string>
    <string name="dist">Wilaya     :</string>
    <string name="okconf">OK</string>
    <string name="cancel">Cancel</string>
    <string name="father_image">PICHA YA MZAZI</string>
    <string name="district">Wilaya</string>
    <string name="oldpass">Old Password</string>
    <string name="newpass">New Password</string>
    <string name="confirm_newpass">Confirm New Password</string>
    <string name="account_number">Namba ya Akaunti</string>
    <string name="namba_ya_simu">Namba ya Simu</string>
    <string name="maelezo">Name of Depositor</string>
    <string name="submit">Submit</string>
    <string name="id_number_ya_mzazi">ID Number ya Mzazi</string>
    <string name="tarehe_ya_kuzaliwa_ya_mtoto">Tarehe ya Kuzaliwa ya Mtoto</string>
    <string name="client_id_ya_mzazi">Client ID ya Mzazi</string>
    <string name="namba_ya_simu_ya_mzazi">Simu ya Mzazi</string>
    <string name="title_activity_cash_withdrawal">CashWithdrawal</string>
    <string name="chip">EMV CHIP</string>
    <string name="title_activity_account_connect">AccountConnect</string>
    <string name="title_activity_pin_change">PinChange</string>

</resources>
