<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:focusable="false">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >
            <EditText
                android:id="@+id/inputFirstName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAllCaps="true"
                android:inputType="textCapCharacters"
                android:hint="@string/fname"
                android:textColor="@color/black"
                android:textSize="18sp" />
            <EditText
                android:id="@+id/inputMiddleName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/sir_name"
                android:inputType="textCapSentences"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/inputLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:hint="@string/last_name" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/phoneNumber"
                android:layout_width="match_parent"
                android:maxLength="10"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/phone" />
        </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputLayoutIdNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/inputIDNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/idnum" />

    </android.support.design.widget.TextInputLayout>

        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/id_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/id_type"
            android:textColorHint="#000"
            app:met_floatingLabel="normal" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/dateTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <io.blackbox_vision.datetimepickeredittext.view.DatePickerInputEditText
                android:id="@+id/datePickerInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date_of_birth"
                app:minDate="01/01/1930"
                app:dateFormat="dd-MM-yyyy"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutDistrict"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/inputDistrict"
                android:layout_width="match_parent"
                android:inputType="textCapSentences"
                android:layout_height="wrap_content"
                android:hint="@string/dsitrict" />

        </android.support.design.widget.TextInputLayout>
        <RadioGroup
            android:id="@+id/radioSex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Male"/>
        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Female" />

    </RadioGroup>
        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/account_type"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:hint="@string/account_type"
            app:met_floatingLabel="normal" />
    <Button
        android:id="@+id/saveData"
        style="@style/ButtonStyle"
        android:layout_gravity="center"
        android:text="Save"
        android:drawablePadding="3dip"
        />
    </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
