<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:focusable="false">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Majina ya Mtoto"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/holo_green_dark" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >
            <EditText
                android:id="@+id/inputChildFName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textCapSentences"
                android:hint="@string/fname"
                android:textColor="@color/black"
                android:textSize="18sp" />
            <EditText
                android:id="@+id/inputChildMiddleName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/sir_name"
                android:inputType="textCapSentences"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >
            <EditText
                android:id="@+id/inputChildLastName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/last_name"
                android:inputType="textCapSentences"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Majina ya Mzazi/Mlezi"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/holo_green_dark" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >
            <EditText
                android:id="@+id/inputFirstName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textCapSentences"
                android:hint="@string/fname"
                android:textColor="@color/black"
                android:textSize="18sp" />
            <EditText
                android:id="@+id/inputMiddleName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/sir_name"
                android:inputType="textCapSentences"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >
            <EditText
                android:id="@+id/inputLastName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/last_name"
                android:inputType="textCapSentences"
                android:textColor="@color/black"
                android:textSize="18sp" />
            <EditText
                android:id="@+id/phoneNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="phone"
                android:maxLength="10"
                android:hint="@string/namba_ya_simu_ya_mzazi"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </LinearLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/identification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/id_number_ya_mzazi" />

        </android.support.design.widget.TextInputLayout>

        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/id_type_"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/id_type"
            android:textColorHint="#000"
            app:met_floatingLabel="normal" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/dateTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <io.blackbox_vision.datetimepickeredittext.view.DatePickerInputEditText
                android:id="@+id/datePickerInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tarehe_ya_kuzaliwa_ya_mtoto"
                app:dateFormat="dd-MM-yyyy"/>

        </android.support.design.widget.TextInputLayout>
        <RadioGroup
            android:id="@+id/radioSex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Male"/>
        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Female" />

    </RadioGroup>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/client_id"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/clientid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/client_id_ya_mzazi" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputDistrict"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/district"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/district" />
        </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/saveData"
        style="@style/ButtonStyle"
        android:layout_gravity="center"
        android:text="Save"
        android:drawablePadding="3dip"
        />
    </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
