<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/coordinatorLayout"
    xmlns:card_view="http://schemas.android.com/tools">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbars"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    </android.support.design.widget.AppBarLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="20dp">

            <android.support.v7.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="fill_parent"
                android:layout_height="450dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="20dp"
                card_view:contentPadding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/oldpassInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true">

                        <EditText
                            android:id="@+id/oldpass"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLength="4"
                            android:hint="@string/oldpass"
                            android:inputType="numberPassword" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/newpassInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true">
                        <EditText
                            android:id="@+id/newpass"
                            android:layout_width="match_parent"
                            android:maxLength="4"
                            android:layout_height="wrap_content"
                            android:hint="@string/newpass"
                            android:inputType="numberPassword"
                            android:visibility="visible" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/confirmInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true">
                        <EditText
                            android:id="@+id/confirm"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLength="4"
                            android:hint="@string/confirm_newpass"
                            android:inputType="numberPassword" />
                    </android.support.design.widget.TextInputLayout>


                    <View
                        android:id="@+id/view"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/gradient" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/submit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/view"
                        android:layout_marginTop="10dp"
                        android:background="#03A0E3"
                        android:text="Submit"
                        android:textColor="#fff"
                        android:visibility="visible" />

                    <ProgressBar
                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                        android:layout_width="match_parent"
                        android:id="@+id/progress_update"
                        android:layout_height="wrap_content"
                        android:indeterminate="true"
                        android:visibility="gone"/>
                </LinearLayout>


            </android.support.v7.widget.CardView>
        </LinearLayout>

</android.support.design.widget.CoordinatorLayout>

